compiler/tests/fixtures/invalid/semantics/salience_role_undefined.viv
// Action with per-role salience referencing a nonexistent role

action bad-salience:
    roles:
        @actor:
            as: initiator
    saliences:
        roles:
            @ghost: #HIGH
